--- a/src/app/pages/formulario-visitas/formulario-visitas.page.scss
+++ b/src/app/pages/formulario-visitas/formulario-visitas.page.scss
@@ -289,6 +289,10 @@ ion-item {
                     height: 16px;
                 }
             }
+
+            .address-display {
+                border-radius: 10px;
+            }
         }
     }
 }
