--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -181,4 +181,12 @@ $breakpoint-lg: 1200px;
         background: #666 !important;
         color: white !important;
     }
+
+    .sucursal-info {
+        background: #2d2d2d !important;
+    }
+
+    .solicitante-info {
+        background: #2d2d2d !important;
+    }
 }
