--- a/src/app/pages/perfil/perfil.page.scss
+++ b/src/app/pages/perfil/perfil.page.scss
@@ -487,7 +487,7 @@ ion-content {
 
     .solicitante-text {
         font-weight: 400;
-        color: white;
+        color: #3b82f6;
         line-height: 1.3;
     }
 }
