fix: cors configuration

--- a/src/app/components/footer-menu/footer-menu.component.html
+++ b/src/app/components/footer-menu/footer-menu.component.html
@@ -17,6 +17,9 @@
       <ion-button fill="clear" (click)="goTo('/agregar-usuario')" class="footer-icon-btn">
         <ion-icon name="person-add-outline"></ion-icon>
       </ion-button>
+      <ion-button fill="clear" (click)="goTo('/entrega-productos')" class="footer-icon-btn">
+        <ion-icon name="cube-outline"></ion-icon>
+      </ion-button>
       <ion-button fill="clear" (click)="goTo('/perfil')" class="footer-icon-btn">
         <ion-icon name="person-circle-outline"></ion-icon>
       </ion-button>
