--- a/src/app/pages/agregar-usuario/agregar-usuario.page.html
+++ b/src/app/pages/agregar-usuario/agregar-usuario.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding main-content">
+<ion-content class="ion-padding main-content has-footer-menu">
   <div class="content-wrapper">
     <!-- Card Principal: selección de cliente/empresa -->
     <ion-card class="selection-card">
