--- a/src/app/pages/equipos/equipos.page.html
+++ b/src/app/pages/equipos/equipos.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="has-footer-menu">
   <!-- Buscador por serial -->
   <br>
   <ion-card class="search-section">
