--- a/src/app/pages/inicio-footer/inicio-footer.page.html
+++ b/src/app/pages/inicio-footer/inicio-footer.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding" fullscreen="true">
+<ion-content class="ion-padding has-footer-menu" fullscreen="true">
   <!-- Bienvenida -->
   <ion-row class="ion-justify-content-center ion-padding">
     <ion-col size="12" size-md="8" text-center>
