--- a/src/app/components/footer-menu/footer-menu.component.scss
+++ b/src/app/components/footer-menu/footer-menu.component.scss
@@ -1,13 +1,17 @@
 .custom-footer {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
-  z-index: 100;
+  z-index: 1000;
 
   ion-toolbar {
-     // o tu color preferido
+    --background: #121212;
     --color: #fff;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
     border-radius: 12px 12px 0 0;
-    padding: 0;
+    padding: 0 0 env(safe-area-inset-bottom);
   }
 }
 
@@ -29,13 +33,13 @@
   --background: transparent;
   --box-shadow: none;
   --border-radius: 0;
-  color: white;
   height: 48px;
 
   ion-icon {
     font-size: 1.6rem;
     transition: transform 0.2s ease;
     color: #1976d2;
+    filter: none !important;
   }
 
   &:active ion-icon {
