--- a/src/app/pages/entrega-productos/entrega-productos.page.scss
+++ b/src/app/pages/entrega-productos/entrega-productos.page.scss
@@ -16,6 +16,17 @@
   margin-top: 12px;
 }
 
+.photo-actions {
+  display: grid;
+  gap: 10px;
+}
+
+@media (min-width: 600px) {
+  .photo-actions {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
 .preview-image {
   width: 100%;
   height: auto;
